client/src/App.css
body {
  margin: 0;
  padding: 0;
  font-family: "Kdam Thmor Pro", sans-serif;
}

.championShipLogo {
  width: 35rem;
}

.sfcccLogo,
.setLogo {
  width: 300px;
  margin-bottom: 70px;
}

.logoWrapper {
  height: 100%;
  margin-top: 140px;
}

.container {
  display: flex;
  height: 100vh;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  background: url("./images/dominaria-mobile-background.jpeg");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
}

.buttonController {
  display: grid;
  grid-template-columns: auto auto;
  grid-gap: 16px;
  margin-bottom: 30px;
}

.signUpButton {
  width: 200px;
  margin-bottom: 16px;
}

@media (min-width: 768px) {
  .container {
    display: flex;
    height: 100vh;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background: url("./images/dominaria-desktop-background.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
  }

  .championShipLogo {
    width: 30rem;
  }

  .logoWrapper {
    height: 100%;
    margin-top: 40px;
  }

  .sfcccLogo,
  .sommarTurreLogo,
  .setLogo {
    width: 400px;
    margin-bottom: 70px;
  }

  .signUpButton:hover {
    transform: scale(120%);
  }
}

